# Patterner

./: .isort.cfg  .travis.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py
example_patterns/: fake.py
patterner/: __init__.py  models.py  patterns.py
patterner/tests/: test_models.py  test_patterns.py
tests/: conftest.py  test_cli.py
