[tool.poetry]

name = "patterner"
version = "0.0"
description = "Make patterns for sewing projects"

license = "MIT"

authors = ["Patrick Forringer <patrick@forringer.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/patterner"
documentation = "https://patterner.readthedocs.io"
repository = "https://github.com/destos/patterner"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]

python = "^3.7"

# TODO: Remove these and add your library's requirements
click = "^6.0"
minilog = "~0.4"
"svg.path" = "^3.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "=18.9b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^3.3"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
pytest-watch = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
pdbpp = "^0.9.6"

[tool.poetry.scripts]

Patterner = "patterner.cli:main"

[tool.black]

py36 = true
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
